backend/deployment/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: elclaustro-strapi
spec:
  selector:
    app: backend
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: backend
      protocol: TCP
      port: 1337
      targetPort: 1337
      # If you set the `spec.type` field to `NodePort` and you want a specific port number,
      # you can specify a value in the `spec.ports[*].nodePort` field.
      # nodePort:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: elclaustro-strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: backend
          image: docker.io/ngeorger/elclaustro-strapi:latest
          # command: ["/sbin/boot"]
          imagePullPolicy: Always
          ports:
            - containerPort: 1337
          resources:
            limits:
              memory: 1Gi
              cpu: 1200m
            requests:
              memory: 512Mi
              cpu: 500m
          volumeMounts:
            - mountPath: /opt/app/public
              name: public
      restartPolicy: Always
      volumes:
        - name: public
          hostPath:
            path: /root/elclaustro-strapi-backend
