backend/deployment/postgres14.yaml
apiVersion: v1
kind: Service
metadata:
  name: elclaustro-strapi-postgres
  namespace: elclaustro-strapi
spec:
  selector:
    app: elclaustro-strapi-postgres
  type: ClusterIP
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
    - name: elclaustro-strapi-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
      # If you set the `spec.type` field to `NodePort` and you want a specific port number,
      # you can specify a value in the `spec.ports[*].nodePort` field.
      # nodePort:
---
apiVersion: apps/v1
kind: StatefulSet
# Only schedule pods on nodes with specific hostname "mb-air": nodeSelector: hostname: mb-air
metadata:
  name: elclaustro-strapi-postgres
  namespace: elclaustro-strapi
  labels:
    app: elclaustro-strapi-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elclaustro-strapi-postgres
  serviceName: elclaustro-strapi-postgres
  template:
    metadata:
      name: elclaustro-strapi-postgres
      labels:
        app: elclaustro-strapi-postgres
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: elclaustro-strapi-postgres
          image: postgres:14.5-alpine # postgres:latest
          # Select only specific node(s) to schedule the pod on:
          resources:
            requests:
              cpu: 0m
              memory: 0Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 5432
              name: tcp-postgresql
              protocol: TCP
          volumeMounts:
            - name: elclaustro-strapi-postgres
              mountPath: /var/lib/postgresql/data
          # Create your configmap using the according template with the following command:
          # kubectl create configmap postgres-config --from-file=deploy/postgres.env
      volumes:
        - name: elclaustro-strapi-postgres
          hostPath:
            path: /root/elclaustro-strapi-postgres
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
